<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/regitserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_element_height"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/tenant" />

        <EditText
            android:id="@+id/tenant"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/tenantText" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_element_height"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/apphostid" />

        <EditText
            android:id="@+id/apphostid"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/apphostidText" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_element_height"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/deviceid" />

        <EditText
            android:id="@+id/deviceId"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            android:text="@string/deviceIdText" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:text="@string/buttonText" />

</LinearLayout>